kernel-tests/tests/snapshots/state_graphs__arp_resolver_state_graph.snap
---
source: kernel-tests/tests/state_graphs.rs
expression: dot
---
digraph ArpResolver {
    compound=true
    node [color="deepskyblue4" style="rounded, filled" fillcolor="azure"]
    edge[color="red"]

    Entry[width=0.2 shape="circle" style="filled" fillcolor="black" label=""]
    Entry -> Incomplete

    Incomplete [label = <
        <table CELLBORDER="0" CELLPADDING="5" style="rounded">
            <tr><td><b>Incomplete</b></td></tr>
            <hr/>
            <tr><td align="left"><font point-size="10">
$&gt;()<br ALIGN="LEFT"/>reply()<br ALIGN="LEFT"/>timeout()<br ALIGN="LEFT"/>
            </font></td></tr>
        </table>
    > margin=0 shape=none]
    Resolved [label = <
        <table CELLBORDER="0" CELLPADDING="5" style="rounded">
            <tr><td><b>Resolved</b></td></tr>
            <hr/>
            <tr><td align="left"><font point-size="10">
is_resolved()<br ALIGN="LEFT"/>
            </font></td></tr>
        </table>
    > margin=0 shape=none]
    Failed [label = <
        <table CELLBORDER="0" CELLPADDING="5" style="rounded">
            <tr><td><b>Failed</b></td></tr>
            <hr/>
            <tr><td align="left"><font point-size="10">
$&gt;()<br ALIGN="LEFT"/>is_failed()<br ALIGN="LEFT"/>
            </font></td></tr>
        </table>
    > margin=0 shape=none]

    Incomplete -> Resolved [label=" reply "]
    Incomplete -> Failed [label=" timeout "]
    Incomplete -> Incomplete [label=" timeout "]
}
