kernel-tests/tests/snapshots/state_graphs__elf_loader_state_graph.snap
---
source: kernel-tests/tests/state_graphs.rs
assertion_line: 123
expression: dot
---
digraph ElfLoader {
    compound=true
    node [color="deepskyblue4" style="rounded, filled" fillcolor="azure"]
    edge[color="red"]

    Entry[width=0.2 shape="circle" style="filled" fillcolor="black" label=""]
    Entry -> ReadingHeader

    ReadingHeader [label = <
        <table CELLBORDER="0" CELLPADDING="5" style="rounded">
            <tr><td><b>ReadingHeader</b></td></tr>
            <hr/>
            <tr><td align="left"><font point-size="10">
$&gt;()<br ALIGN="LEFT"/>
            </font></td></tr>
        </table>
    > margin=0 shape=none]
    ValidatingHeader [label = <
        <table CELLBORDER="0" CELLPADDING="5" style="rounded">
            <tr><td><b>ValidatingHeader</b></td></tr>
            <hr/>
            <tr><td align="left"><font point-size="10">
$&gt;()<br ALIGN="LEFT"/>
            </font></td></tr>
        </table>
    > margin=0 shape=none]
    MappingSegments [label = <
        <table CELLBORDER="0" CELLPADDING="5" style="rounded">
            <tr><td><b>MappingSegments</b></td></tr>
            <hr/>
            <tr><td align="left"><font point-size="10">
$&gt;()<br ALIGN="LEFT"/>
            </font></td></tr>
        </table>
    > margin=0 shape=none]
    BuildingStack [label = <
        <table CELLBORDER="0" CELLPADDING="5" style="rounded">
            <tr><td><b>BuildingStack</b></td></tr>
            <hr/>
            <tr><td align="left"><font point-size="10">
$&gt;()<br ALIGN="LEFT"/>
            </font></td></tr>
        </table>
    > margin=0 shape=none]
    Done [label = <
        <table CELLBORDER="0" CELLPADDING="5" style="rounded">
            <tr><td><b>Done</b></td></tr>
            <hr/>
            <tr><td align="left"><font point-size="10">
is_done()<br ALIGN="LEFT"/>
            </font></td></tr>
        </table>
    > margin=0 shape=none]
    Failed [label = <
        <table CELLBORDER="0" CELLPADDING="5" style="rounded">
            <tr><td><b>Failed</b></td></tr>
            <hr/>
            <tr><td align="left"><font point-size="10">
$&gt;()<br ALIGN="LEFT"/>is_failed()<br ALIGN="LEFT"/>
            </font></td></tr>
        </table>
    > margin=0 shape=none]

    ReadingHeader -> ValidatingHeader [label=" $> "]
    ReadingHeader -> Failed [label=" $> "]
    ValidatingHeader -> MappingSegments [label=" $> "]
    ValidatingHeader -> Failed [label=" $> "]
    MappingSegments -> BuildingStack [label=" $> "]
    MappingSegments -> Failed [label=" $> "]
    BuildingStack -> Done [label=" $> "]
    BuildingStack -> Failed [label=" $> "]
}
