kernel-tests/tests/snapshots/state_graphs__io_scheduler_state_graph.snap
---
source: kernel-tests/tests/state_graphs.rs
expression: dot
---
digraph IoScheduler {
    compound=true
    node [color="deepskyblue4" style="rounded, filled" fillcolor="azure"]
    edge[color="red"]

    Entry[width=0.2 shape="circle" style="filled" fillcolor="black" label=""]
    Entry -> HasFreeSlots

    HasFreeSlots [label = <
        <table CELLBORDER="0" CELLPADDING="5" style="rounded">
            <tr><td><b>HasFreeSlots</b></td></tr>
            <hr/>
            <tr><td align="left"><font point-size="10">
acquire(pid: u32)<br ALIGN="LEFT"/>release(pid: u32)<br ALIGN="LEFT"/>
            </font></td></tr>
        </table>
    > margin=0 shape=none]
    Full [label = <
        <table CELLBORDER="0" CELLPADDING="5" style="rounded">
            <tr><td><b>Full</b></td></tr>
            <hr/>
            <tr><td align="left"><font point-size="10">
acquire(pid: u32)<br ALIGN="LEFT"/>release(pid: u32)<br ALIGN="LEFT"/>is_full()<br ALIGN="LEFT"/>
            </font></td></tr>
        </table>
    > margin=0 shape=none]

    HasFreeSlots -> Full [label=" acquire "]
    Full -> HasFreeSlots [label=" release "]
}
