kernel-tests/tests/snapshots/state_graphs__ip_reassembly_state_graph.snap
---
source: kernel-tests/tests/state_graphs.rs
expression: dot
---
digraph IpReassembly {
    compound=true
    node [color="deepskyblue4" style="rounded, filled" fillcolor="azure"]
    edge[color="red"]

    Entry[width=0.2 shape="circle" style="filled" fillcolor="black" label=""]
    Entry -> Idle

    Idle [label = <
        <table CELLBORDER="0" CELLPADDING="5" style="rounded">
            <tr><td><b>Idle</b></td></tr>
            <hr/>
            <tr><td align="left"><font point-size="10">
fragment(frag: crate::ip_reasm::Fragment)<br ALIGN="LEFT"/>state()<br ALIGN="LEFT"/>
            </font></td></tr>
        </table>
    > margin=0 shape=none]
    Reassembling [label = <
        <table CELLBORDER="0" CELLPADDING="5" style="rounded">
            <tr><td><b>Reassembling</b></td></tr>
            <hr/>
            <tr><td align="left"><font point-size="10">
$&gt;()<br ALIGN="LEFT"/>fragment(frag: crate::ip_reasm::Fragment)<br ALIGN="LEFT"/>timeout()<br ALIGN="LEFT"/>state()<br ALIGN="LEFT"/>
            </font></td></tr>
        </table>
    > margin=0 shape=none]
    Complete [label = <
        <table CELLBORDER="0" CELLPADDING="5" style="rounded">
            <tr><td><b>Complete</b></td></tr>
            <hr/>
            <tr><td align="left"><font point-size="10">
$&gt;()<br ALIGN="LEFT"/>state()<br ALIGN="LEFT"/>is_complete()<br ALIGN="LEFT"/>
            </font></td></tr>
        </table>
    > margin=0 shape=none]
    Expired [label = <
        <table CELLBORDER="0" CELLPADDING="5" style="rounded">
            <tr><td><b>Expired</b></td></tr>
            <hr/>
            <tr><td align="left"><font point-size="10">
$&gt;()<br ALIGN="LEFT"/>state()<br ALIGN="LEFT"/>is_expired()<br ALIGN="LEFT"/>
            </font></td></tr>
        </table>
    > margin=0 shape=none]

    Idle -> Reassembling [label=" fragment "]
    Reassembling -> Reassembling [label=" fragment "]
    Reassembling -> Expired [label=" timeout "]
    Reassembling -> Complete [label=" $> "]
}
