kernel-tests/tests/snapshots/state_graphs__kernel_state_graph.snap
---
source: kernel-tests/tests/state_graphs.rs
expression: dot
---
digraph Kernel {
    compound=true
    node [color="deepskyblue4" style="rounded, filled" fillcolor="azure"]
    edge[color="red"]

    Entry[width=0.2 shape="circle" style="filled" fillcolor="black" label=""]
    Entry -> InitMemory

    subgraph cluster_Booting {
        label = <
            <table cellborder="0" border="0">
                <tr><td>Booting</td></tr>
                <hr/>
                <tr><td align="left"><font point-size="10">
kernel_panic(msg: String)<br ALIGN="LEFT"/>
                </font></td></tr>
            </table>
        >
        style = rounded
        Booting [shape="point" width="0"]

        InitMemory [label = <
            <table CELLBORDER="0" CELLPADDING="5" style="rounded">
                <tr><td><b>InitMemory</b></td></tr>
                <hr/>
                <tr><td align="left"><font point-size="10">
$&gt;()<br ALIGN="LEFT"/>
                </font></td></tr>
            </table>
        > margin=0 shape=none]
        InitIDT [label = <
            <table CELLBORDER="0" CELLPADDING="5" style="rounded">
                <tr><td><b>InitIDT</b></td></tr>
                <hr/>
                <tr><td align="left"><font point-size="10">
$&gt;()<br ALIGN="LEFT"/>
                </font></td></tr>
            </table>
        > margin=0 shape=none]
        InitTimer [label = <
            <table CELLBORDER="0" CELLPADDING="5" style="rounded">
                <tr><td><b>InitTimer</b></td></tr>
                <hr/>
                <tr><td align="left"><font point-size="10">
$&gt;()<br ALIGN="LEFT"/>
                </font></td></tr>
            </table>
        > margin=0 shape=none]
        InitConsole [label = <
            <table CELLBORDER="0" CELLPADDING="5" style="rounded">
                <tr><td><b>InitConsole</b></td></tr>
                <hr/>
                <tr><td align="left"><font point-size="10">
$&gt;()<br ALIGN="LEFT"/>
                </font></td></tr>
            </table>
        > margin=0 shape=none]
        LaunchInit [label = <
            <table CELLBORDER="0" CELLPADDING="5" style="rounded">
                <tr><td><b>LaunchInit</b></td></tr>
                <hr/>
                <tr><td align="left"><font point-size="10">
$&gt;()<br ALIGN="LEFT"/>
                </font></td></tr>
            </table>
        > margin=0 shape=none]
    }
    Running [label = <
        <table CELLBORDER="0" CELLPADDING="5" style="rounded">
            <tr><td><b>Running</b></td></tr>
            <hr/>
            <tr><td align="left"><font point-size="10">
$&gt;()<br ALIGN="LEFT"/>kernel_panic(msg: String)<br ALIGN="LEFT"/>
            </font></td></tr>
        </table>
    > margin=0 shape=none]
    Halted [label = <
        <table CELLBORDER="0" CELLPADDING="5" style="rounded">
            <tr><td><b>Halted</b></td></tr>
            <hr/>
            <tr><td align="left"><font point-size="10">
$&gt;()<br ALIGN="LEFT"/>is_done()<br ALIGN="LEFT"/>
            </font></td></tr>
        </table>
    > margin=0 shape=none]

    InitMemory -> InitIDT [label=" $> "]
    InitIDT -> InitTimer [label=" $> "]
    InitTimer -> InitConsole [label=" $> "]
    InitConsole -> LaunchInit [label=" $> "]
    LaunchInit -> Running [label=" $> "]
    Booting -> Halted [label=" kernel_panic " ltail="cluster_Booting"]
    Running -> Halted [label=" kernel_panic "]
}
